[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "ksana"
dynamic = ["version"]
description = "KsanaDit"
authors = [{ name = "KsanaDit", email = "KsanaDiT@venus.com" }]
readme = "README.md"
requires-python = ">=3.10,<4.0"
license = {file = "LICENSE"}
dependencies = [
  "numpy",
  "easydict",
  # below should use cuda version in docker to avoid reinstall cpu version of torch
  # "torch >= 2.6.0,<=2.7.1",
  # "torchvision >= 0.21.0,<=0.22.2",
  # "torchaudio >= 2.6.0,<=2.7.2",
  "accelerate >= 1.2.1",
  "diffusers >= 0.35.2",
  "peft >= 0.17.0",
  "ftfy",
  "gguf >= 0.17.0",
  "pyloudnorm",
  "xformers >= 0.0.29",
  "flash_attn >=2.6.0",
  # "flash_attn >=2.7.1 <= 2.8.2",
  "triton >= 3.2.0",
  "pyinstrument >= 5.1.1",
  "dataclasses >= 0.6; python_version < '3.7'",
  "imageio >= 2.34.2",
  "imageio-ffmpeg >= 0.4.8",
  # "sageattention >= 2.1.1"
]

# wan2.2 deps:
# torch                                          2.7.0
# torchaudio                                     2.7.1+cu128
# torchvision                                    0.22.1+cu128
# flash_attn                                     2.7.3
# flashinfer-python                              0.2.2.post1
# vllm-flash-attn                                2.6.2+cu128
# xformers                                       0.0.30
# triton                                         3.3.0
# tritonclient                                   2.51.0
# trpc_triton                                    0.0.5a4
# transformers                                   4.51.3


[project.urls]
Repository = "https://git.woa.com/jackyjtang/KsanaDiT.git"

#  Used by Comfy Registry https://comfyregistry.org
[tool.comfy]
PublisherId = "KsanaDit"
DisplayName = "KsanaDit"
Icon = ""

[project.optional-dependencies]  # 可选依赖
dev = ["pytest>=6.0", "black>=21.0", "pyinstrument>=5.1.1", "pre-commit>=4.0.0"]

[project.scripts]  # 命令行工具
mycli = "my_package.cli:main"

[tool.setuptools_scm]
version_scheme = "post-release"
write_to = "ksana/_version.py"
local_scheme = "node-and-date"

[tool.setuptools.packages.find]  # 包发现规则
where = ["."]
exclude = ["tests*", "assets*", "docker*", "docs", "scripts*", "comfyui*"]

# 包含数据文件（如配置文件）
[tool.setuptools.package-data]
ksana = ["data/*.json"]

# 自定义构建选项
[tool.setuptools]
zip-safe = false  # 禁止以 zip 形式安装
