[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "ksana-dit"
dynamic = ["version"]
description = "KsanaDit"
authors = [{ name = "KsanaDit", email = "KsanaDiT@venus.com" }]
readme = "README.md"
requires-python = ">=3.10,<4.0"
license = {file = "LICENSE"}
dependencies = [
  "numpy",
  "accelerate >= 1.2.1",
  "diffusers >= 0.35.2",
  "peft >= 0.17.0",
  "gguf >= 0.17.0",
  "pyinstrument >= 5.1.1",
  "dataclasses >= 0.6; python_version < '3.7'",
  "imageio >= 2.34.2",
  "imageio-ffmpeg >= 0.4.8",
  "omegaconf >= 2.3.0",
  "einops >= 0.8.1",
]

[project.urls]
Repository = "https://git.woa.com/venus-aigc/KsanaDiT.git"

#  Used by Comfy Registry https://comfyregistry.org
[tool.comfy]
PublisherId = "KsanaDit"
DisplayName = "KsanaDit"
Icon = ""

[project.optional-dependencies]  # 可选依赖
dev = ["pytest>=6.0", "black>=21.0", "pyinstrument>=5.1.1", "pre-commit>=4.0.0"]
gpu = ["xformers >= 0.0.29", "flash_attn >=2.6.0", "triton >= 3.2.0"]
npu = []

[project.scripts]  # 命令行工具
mycli = "my_package.cli:main"

[tool.setuptools_scm]
version_scheme = "post-release"
write_to = "ksana/_version.py"
local_scheme = "node-and-date"

[tool.setuptools.packages.find]  # 包发现规则
where = ["."]
exclude = ["tests*", "assets*", "docker*", "docs", "scripts*", "comfyui*", "examples*"]

# 包含数据文件（如配置文件）
[tool.setuptools.package-data]
ksana = ["data/*.json"]

# 自定义构建选项
[tool.setuptools]
zip-safe = false  # 禁止以 zip 形式安装
